// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb > renders with as correctly 1`] = `
"<div aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</div>"
`;

exports[`Breadcrumb > renders with class correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0 w-48">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with custom slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold">Custom slot</a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with item slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors">Item slot</a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75">Item slot</span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with item-label slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Item label slot</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Item label slot</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with item-leading slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors">Item leading slot<span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75">Item leading slot<span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with item-trailing slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span>Item trailing slot</a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span>Item trailing slot</span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with items correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with labelKey correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span>
        <!--v-if-->
      </a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">i-lucide-box</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">i-lucide-link</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with separator slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex">/</li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex">/</li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with separatorIcon correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium hover:text-default transition-colors"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:minus shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted font-medium cursor-not-allowed opacity-75"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:minus shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-semibold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with ui correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="relative min-w-0">
  <ol data-slot="list" class="flex items-center gap-1.5">
    <li data-slot="item" class="flex min-w-0"><a href="/" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted hover:text-default transition-colors font-bold"><span data-slot="root" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" alt="Benjamin Canac" width="20" height="20" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span><span data-slot="linkLabel" class="truncate">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><span data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-muted cursor-not-allowed opacity-75 font-bold"><span class="iconify i-lucide:box shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class="flex"><span class="iconify i-lucide:chevron-right shrink-0 size-5 text-muted" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class="flex min-w-0"><a href="/components/breadcrumb" data-slot="link" class="group relative flex items-center gap-1.5 text-sm min-w-0 focus-visible:outline-primary text-primary font-bold"><span class="iconify i-lucide:link shrink-0 size-5" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="truncate">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;
